--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "typescript": "4.8.4"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.42.1",
     "prettier": "^2.7.1"
   }
 }
