--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongodb": "^4.11.0",
     "mongoose": "^6.7.1",
     "next": "13.0.2",
+    "next-auth": "^4.17.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.8.4"
