--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "mongodb": "^4.13.0",
     "mongoose": "^6.7.1",
     "next": "13.0.2",
-    "next-auth": "^4.18.8",
+    "next-auth": "4.19.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.8.4"
