--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.12",
+    "@mui/x-date-pickers": "^5.0.19",
     "@next-auth/mongodb-adapter": "^1.1.1",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
+    "dayjs": "^1.11.7",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
     "mongodb": "^4.13.0",
