--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next-auth": "^4.18.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "ts-debounce": "^4.0.0",
     "typescript": "4.8.4"
   },
   "devDependencies": {
