--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "next": "13.0.2",
     "next-auth": "^4.18.8",
     "react": "18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "18.2.0",
     "ts-debounce": "^4.0.0",
     "typescript": "4.8.4"
   },
   "devDependencies": {
+    "@types/react-color": "^3.0.6",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "prettier": "^2.7.1"
   }
