--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -25,13 +26,18 @@
     "mongoose": "^6.7.1",
     "next": "13.0.2",
     "next-auth": "^4.18.8",
+    "node-mocks-http": "^1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "ts-debounce": "^4.0.0",
     "typescript": "4.8.4"
   },
   "devDependencies": {
+    "@types/jest": "^29.4.0",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
-    "prettier": "^2.7.1"
+    "jest": "^29.5.0",
+    "prettier": "^2.7.1",
+    "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1"
   }
 }
