--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "typescript": "4.8.4"
   },
   "devDependencies": {
+    "@shelf/jest-mongodb": "^4.1.7",
     "@types/jest": "^29.4.0",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
+    "dotenv": "^16.0.3",
     "jest": "^29.5.0",
     "prettier": "^2.7.1",
     "ts-jest": "^29.0.5",
