--- a/.env.test
+++ b/.env.test
@@ -1,4 +1,4 @@
-MONGODB_URI="mongodb+srv://ccaht:RQat8EZrmXUtWMGL@ccaht-dev.zqqfakv.mongodb.net/?retryWrites=true&w=majority"
+MONGODB_URI="mongodb://testurl"
 GOOGLE_CLIENT_ID=googlefakeclientid
 GOOGLE_CLIENT_SECRET=googlefakesecret
 NEXTAUTH_URL=http://localhost:3000
