--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.10.12",
     "@mui/x-date-pickers": "^5.0.19",
     "@next-auth/mongodb-adapter": "^1.1.1",
+    "@reduxjs/toolkit": "^1.9.3",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
@@ -26,10 +27,14 @@
     "mongoose": "^6.7.1",
     "next": "13.0.2",
     "next-auth": "^4.18.8",
+    "next-redux-wrapper": "^8.1.0",
     "node-mocks-http": "^1.12.1",
     "react": "18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
     "ts-debounce": "^4.0.0",
     "typescript": "4.8.4"
   },
@@ -37,6 +42,7 @@
     "@shelf/jest-mongodb": "^4.1.7",
     "@types/jest": "^29.4.0",
     "@types/react-color": "^3.0.6",
+    "@types/redux-persist": "^4.3.1",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "dotenv": "^16.0.3",
     "jest": "^29.5.0",
