--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@hookform/resolvers": "^3.1.0",
     "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.12",
     "@mui/x-date-pickers": "^5.0.19",
@@ -32,11 +33,13 @@
     "react": "18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "ts-debounce": "^4.0.0",
-    "typescript": "4.8.4"
+    "typescript": "4.8.4",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@shelf/jest-mongodb": "^4.1.7",
