--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest"
+    "test": "jest",
+    "analyze": "cross-env ANALYZE=true next build"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -41,11 +42,13 @@
     "typescript": "4.8.4"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^13.4.1",
     "@shelf/jest-mongodb": "^4.1.7",
     "@types/jest": "^29.4.0",
     "@types/react-color": "^3.0.6",
     "@types/redux-persist": "^4.3.1",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "jest": "^29.5.0",
     "prettier": "^2.7.1",
