--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next-auth": "^4.18.8",
     "next-redux-wrapper": "^8.1.0",
     "node-mocks-http": "^1.12.1",
+    "nodemailer": "^6.9.2",
     "react": "18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "18.2.0",
