--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
+    "sharp": "^0.32.1",
     "ts-debounce": "^4.0.0",
     "typescript": "4.8.4",
     "zod": "^3.21.4"
