--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest"
+    "test": "jest",
+    "deploy": "push-dir --dir=.next --branch=deploy --cleanup"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -32,6 +33,7 @@
     "next-redux-wrapper": "^8.1.0",
     "node-mocks-http": "^1.12.1",
     "nodemailer": "^6.9.2",
+    "push-dir": "^0.4.1",
     "react": "18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "18.2.0",
