--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -1,10 +1,10 @@
-name: Node.js CI
+name: Lint App
 
 on:
   pull_request:
 
 jobs:
-  test:
+  lint:
     runs-on: 'ubuntu-latest'
     steps:
       - name: Checkout repo
